; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_ezx-pcap.c_ezx_pcap_putget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_ezx-pcap.c_ezx_pcap_putget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcap_chip = type { i64, i32 }
%struct.spi_transfer = type { i32, i32*, i32* }
%struct.spi_message = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcap_chip*, i64*)* @ezx_pcap_putget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ezx_pcap_putget(%struct.pcap_chip* %0, i64* %1) #0 {
  %3 = alloca %struct.pcap_chip*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.spi_transfer, align 8
  %6 = alloca %struct.spi_message, align 4
  %7 = alloca i32, align 4
  store %struct.pcap_chip* %0, %struct.pcap_chip** %3, align 8
  store i64* %1, i64** %4, align 8
  %8 = call i32 @memset(%struct.spi_transfer* %5, i32 0, i32 24)
  %9 = call i32 @spi_message_init(%struct.spi_message* %6)
  %10 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 0
  store i32 8, i32* %10, align 8
  %11 = call i32 @spi_message_add_tail(%struct.spi_transfer* %5, %struct.spi_message* %6)
  %12 = load i64*, i64** %4, align 8
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.pcap_chip*, %struct.pcap_chip** %3, align 8
  %15 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %14, i32 0, i32 0
  store i64 %13, i64* %15, align 8
  %16 = load %struct.pcap_chip*, %struct.pcap_chip** %3, align 8
  %17 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %16, i32 0, i32 0
  %18 = bitcast i64* %17 to i32*
  %19 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 2
  store i32* %18, i32** %19, align 8
  %20 = load %struct.pcap_chip*, %struct.pcap_chip** %3, align 8
  %21 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %20, i32 0, i32 0
  %22 = bitcast i64* %21 to i32*
  %23 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %5, i32 0, i32 1
  store i32* %22, i32** %23, align 8
  %24 = load %struct.pcap_chip*, %struct.pcap_chip** %3, align 8
  %25 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @spi_sync(i32 %26, %struct.spi_message* %6)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %2
  %31 = load %struct.pcap_chip*, %struct.pcap_chip** %3, align 8
  %32 = getelementptr inbounds %struct.pcap_chip, %struct.pcap_chip* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64*, i64** %4, align 8
  store i64 %33, i64* %34, align 8
  br label %35

35:                                               ; preds = %30, %2
  %36 = load i32, i32* %7, align 4
  ret i32 %36
}

declare dso_local i32 @memset(%struct.spi_transfer*, i32, i32) #1

declare dso_local i32 @spi_message_init(%struct.spi_message*) #1

declare dso_local i32 @spi_message_add_tail(%struct.spi_transfer*, %struct.spi_message*) #1

declare dso_local i32 @spi_sync(i32, %struct.spi_message*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
